unpackaged/main/default/objects/Return_Payment_Log__c/Return_Payment_Log__c.object-meta.xml
<CustomObject>
    <label>Return Payment Log</label>
    <nameField>
        <displayFormat>RPL-{000000}</displayFormat>
        <label>Return Payment Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Return Payment Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>