unpackaged/main/default/objects/Return_Payment_Log__c/fields/DebitAmount__c.field-meta.xml
<CustomField>
    <fullName>DebitAmount__c</fullName>
    <label>DebitAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>