unpackaged/main/default/objects/Return_Payment_Log__c/fields/HasError__c.field-meta.xml
<CustomField>
    <fullName>HasError__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HasError</label>
    <type>Checkbox</type>
</CustomField>