unpackaged/main/default/objects/Return_Payment_Log__c/fields/Payment_Processed__c.field-meta.xml
<CustomField>
    <fullName>Payment_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Fundingo automation to ensure payments don't get processed twice</description>
    <label>Payment Processed</label>
    <type>Checkbox</type>
</CustomField>